--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 </head>
-<body background="img/back.jpg" onload="show()">
+<body background="img/back.gif" onload="show()">
 
     <header>
     
