--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         <div class="col p-5">
                             <img id="c2" src="img/C_Language.jpg">
                             <div id="icons">
-                                <a href="img/C Language.jpg"><i class="fa fa-download fa-1x d-block text-white"></i></a>
+                                <a href="img/C_Language.jpg"><i class="fa fa-download fa-1x d-block text-white"></i></a>
                             </div>
                             <br>
                             <p class="certificates1">C Language</p>
