--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -17,7 +17,7 @@
     <h1><center><b> Dashboard </b></center></h1>
     <hr>
 
-    <a href="Home.html"><button class="button"><i class="fa fa-sign-out" aria-hidden="true"> Log Out </i></button></a>
+    <a href="index.html"><button class="button"><i class="fa fa-sign-out" aria-hidden="true"> Log Out </i></button></a>
 
     <div class="user">
       <h2><center>Welcome <u>admin</u></center></h2>
