--- a/Dashboard.html
+++ b/Dashboard.html
@@ -46,7 +46,7 @@
     <hr>
     <a href="Admincont.html"><i class="fa fa-mobile" aria-hidden="true"></i>&nbsp;Admin Contact</a>
     <hr>
-    <a href="home.html"> <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a>
+    <a href="index.html"> <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a>
     <hr>
   </div>
 
