--- a/Login.html
+++ b/Login.html
@@ -31,7 +31,7 @@
       <a href="forgot.html"> Forgot password !!</a>
 
     </form>
-    <a href="Home.html"><button class="button"><i class="fa fa-home">  Home </i></button></a>
+    <a href="index.html"><button class="button"><i class="fa fa-home">  Home </i></button></a>
 
   </div>
 
