--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
       </form>
     </div>
 
-    <a href="Home.html"><button class="button"><i class="fa fa-home">  Home </i></button></a>
+    <a href="index.html"><button class="button"><i class="fa fa-home">  Home </i></button></a>
 
 
     <script>
