--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="menudropdown1">
 
     <ul>
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
 
       <!--<li><a href="Sign-Up.html">Faculty Sign Up</a></li>-->
 
