--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <!--<li><a href="Sign-Up.html">Faculty Sign Up</a></li>-->
 
-      <li><a href="login.html">Faculty Login</a></li>
+      <li><a href="Login.html">Faculty Login</a></li>
 
       <li><a href="admin.html">Admin Login</a></li>
 
