--- a/revacont.html
+++ b/revacont.html
@@ -28,9 +28,9 @@
       <i class ="fa fa-phone"aria-hidden="true"></i>
     </div>
 
-    <h3><b>Hardik  :</b>      +91-9632402364</h3>
-    <h3><b>Naveen  :</b>      +91-8660862234</h3>
-    <h3><b>Vishal  :</b>      +91-9731282731</h3>
+    <h3><b>Hardik  :</b>      hardikpathar158@gmail.com</h3>
+    <h3><b>Naveen  :</b>      naveenrv247@gmail.com</h3>
+    <h3><b>Vishal  :</b>      9731vishalkumar@gmail.com</h3>
 
     </form>
 
@@ -40,7 +40,7 @@
       <i class ="fa fa-phone"aria-hidden="true"></i>
     </div>
 
-    <a href="Home.html"><button class="button"><i class="fa fa-home">  Home </i></button></a>
+    <a href="index.html"><button class="button"><i class="fa fa-home">  Home </i></button></a>
 
   </body>
 </html>
