--- a/forgot.html
+++ b/forgot.html
@@ -19,7 +19,7 @@
         <input type="text" name="name" class="form-control" placeholder="Enter Your Name" required></br>
         <input type="email" name="email" class="form-control" placeholder="Enter Your Email-ID" required></br>
         <textarea name="message" class="form-control" placeholder="Message" rows="4" required></textarea></br>
-        <input type="submit" value="Send Message" class="form-control submit">
+        <a href="respond.html"><input type="submit" value="Send Message" class="form-control submit"></a>
       </form>
     </div>
   </body>
