--- a/forgot.html
+++ b/forgot.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <a href="login.html"><button class="button"><i class="fa fa-arrow-circle-left" aria-hidden="true"> Back </i></button></a>
+    <a href="Login.html"><button class="button"><i class="fa fa-arrow-circle-left" aria-hidden="true"> Back </i></button></a>
 
     <div class="forgot">
       <h2>Forgot Password</h2>
