--- a/admin.html
+++ b/admin.html
@@ -18,7 +18,7 @@
 
         <input type="password" placeholder="Password" required onkeyup="charnummix(this)">
 
-        <a href="AdminDashboard.html"><button>LOGIN</button></a>
+        <a href="AdminDashboard.html"><input type="submit" value="Login"></a>
 
       </form>
     </div>
