--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 
   </head>
-<body>
+<body class="bg-grey">
 
   <h3> Welcome to </h3><h1><b> Faculty Detail Management System </b></h1>
 
